---
source: src/builder/tests/inserts/insert.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_peoples_insert" AS (
  INSERT INTO
    "public"."peoples" ("first-name", "last-name", "favorite_color")
  VALUES
    ($1, $2, $3) RETURNING *
),
"cte_peoples_data" AS (
  SELECT
    "cte_peoples_insert"."id" :: TEXT AS "id",
    "cte_peoples_insert"."id" AS "main_id",
    NULL :: TEXT AS "related_id",
    NULL :: TEXT AS "related_type",
    $4 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $5,
      "cte_peoples_insert"."age",
      $6,
      "cte_peoples_insert"."first-name",
      $7,
      "cte_peoples_insert"."gender",
      $8,
      "cte_peoples_insert"."last-name",
      $9,
      "cte_peoples_insert"."twitter"
    ) AS "data",
    "cte_peoples_insert"."favorite_color" AS "rel_favorite_color"
  FROM
    "cte_peoples_insert"
),
"cte_rel_favorite_color_data" AS (
  SELECT
    "public"."favorite_color"."id" :: TEXT AS "id",
    "public"."favorite_color"."id" AS "main_id",
    "cte_peoples_data"."id" :: TEXT AS "related_id",
    $10 :: TEXT AS "related_type",
    $11 :: TEXT AS "type",
    JSON_BUILD_OBJECT($12, "public"."favorite_color"."color") AS "data"
  FROM
    "public"."favorite_color"
    INNER JOIN "cte_peoples_data" ON "public"."favorite_color"."id" = "cte_peoples_data"."rel_favorite_color"
),
"cte_rel_people-article_rel_data" AS (
  SELECT
    "public"."people-article"."id" :: TEXT AS "id",
    "public"."people-article"."article_id" AS "rel_article_id",
    "public"."people-article"."people_id" AS "rel_people_id"
  FROM
    "public"."people-article"
    INNER JOIN "cte_peoples_data" ON "public"."people-article"."people_id" = "cte_peoples_data"."main_id"
),
"cte_rel_articles_data" AS (
  SELECT
    "public"."articles"."id" :: TEXT AS "id",
    "public"."articles"."id" AS "main_id",
    "cte_rel_people-article_rel_data"."rel_people_id" :: TEXT AS "related_id",
    $13 :: TEXT AS "related_type",
    $14 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $15,
      "public"."articles"."body",
      $16,
      "public"."articles"."title"
    ) AS "data"
  FROM
    "public"."articles"
    INNER JOIN "cte_rel_people-article_rel_data" ON "cte_rel_people-article_rel_data"."rel_article_id" = "public"."articles"."id"
),
"cte_rel_comments_data" AS (
  SELECT
    "public"."comments"."id" :: TEXT AS "id",
    "public"."comments"."id" AS "main_id",
    "public"."comments"."author" :: TEXT AS "related_id",
    $17 :: TEXT AS "related_type",
    $18 :: TEXT AS "type",
    JSON_BUILD_OBJECT($19, "public"."comments"."body") AS "data",
    "public"."comments"."author" AS "rel_author"
  FROM
    "public"."comments"
    INNER JOIN "cte_peoples_data" ON "cte_peoples_data"."main_id" = "public"."comments"."author"
  WHERE
    "public"."comments"."author" = "cte_peoples_data"."main_id"
) (
  SELECT
    "cte_rel_articles_data"."id",
    "cte_rel_articles_data"."type",
    "cte_rel_articles_data"."data",
    "cte_rel_articles_data"."related_type",
    "cte_rel_articles_data"."related_id"
  FROM
    "cte_rel_articles_data"
)
UNION
ALL (
  SELECT
    "cte_rel_comments_data"."id",
    "cte_rel_comments_data"."type",
    "cte_rel_comments_data"."data",
    "cte_rel_comments_data"."related_type",
    "cte_rel_comments_data"."related_id"
  FROM
    "cte_rel_comments_data"
)
UNION
ALL (
  SELECT
    "cte_rel_favorite_color_data"."id",
    "cte_rel_favorite_color_data"."type",
    "cte_rel_favorite_color_data"."data",
    "cte_rel_favorite_color_data"."related_type",
    "cte_rel_favorite_color_data"."related_id"
  FROM
    "cte_rel_favorite_color_data"
)
UNION
ALL (
  SELECT
    "cte_peoples_data"."id",
    "cte_peoples_data"."type",
    "cte_peoples_data"."data",
    "cte_peoples_data"."related_type",
    "cte_peoples_data"."related_id"
  FROM
    "cte_peoples_data"
);
